@@ -40,6 +40,7 @@
 //#define GFX_USE_OS_CMSIS                             FALSE
 //#define GFX_USE_OS_CMSIS2                            FALSE
 //#define GFX_USE_OS_RAW32                             FALSE
+//#define GFX_USE_OS_ZEPHYR                            FALSE
 //#define GFX_USE_OS_NIOS                              FALSE
 //#define GFX_USE_OS_QT                                FALSE
 //    #define INTERRUPTS_OFF()                         optional_code
